--- a/package.json
+++ b/package.json
@@ -45,5 +45,15 @@
         ]
       }
     }
+  },
+  "dependencies": {
+    "@reown/walletkit": "^1.2.11",
+    "@supabase/supabase-js": "^2.58.0",
+    "@walletconnect/core": "^2.21.9",
+    "@walletconnect/utils": "^2.21.9",
+    "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
+    "install": "^0.13.0",
+    "npm": "^11.6.1"
   }
 }
